force-app/main/default/objects/Change_Request_Overview__c/Change_Request_Overview__c.object-meta.xml
<CustomObject>
    <label>FO DST Change Request</label>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FO DST Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>