force-app/main/default/objects/Change_Request_Overview__c/fields/Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date__c</fullName>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>