force-app/main/default/objects/Change_Request_Overview__c/fields/Business_Days_for_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_for_Confirmation__c</fullName>
    <label>Business Days for Confirmation - Manual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>