force-app/main/default/objects/Change_Request_Overview__c/fields/Business_days_for_T_shirt_size2__c.field-meta.xml
<CustomField>
    <fullName>Business_days_for_T_shirt_size2__c</fullName>
    <formula>T_Shirt_size_Date__c -  Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days for T-Shirt Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>