force-app/main/default/objects/Change_Request_Overview__c/fields/Business_days_for_T_shirt_size__c.field-meta.xml
<CustomField>
    <fullName>Business_days_for_T_shirt_size__c</fullName>
    <label>Business days for T-shirt size - Manual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>