force-app/main/default/objects/Change_Request_Overview__c/fields/Business_Days_TShirt__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_TShirt__c</fullName>
    <formula>IF(CR_session_date__c  &lt;&gt; T_Shirt_size_Date__c, IF( /** Condition */ AND( (5 - (CASE(MOD( CR_session_date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( T_Shirt_size_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), ((( T_Shirt_size_Date__c - CR_session_date__c ) + 1) &lt; 7) ), /** Value to YES */ ( (CASE(MOD( T_Shirt_size_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( CR_session_date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) ), /** Value to NOT */ ( ((FLOOR((( T_Shirt_size_Date__c - CR_session_date__c ) - (CASE(MOD( CR_session_date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + (CASE(MOD( CR_session_date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + (CASE(MOD( T_Shirt_size_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ) ) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days for T-Shirt Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>