force-app/main/default/objects/Change_Request_Overview__c/fields/Change_Request_CR_Average_Days_from_Su__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_CR_Average_Days_from_Su__c</fullName>
    <label>Time between CR and Delivery - Manual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>