force-app/main/default/objects/Change_Request_Overview__c/fields/Committed_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Release_Date__c</fullName>
    <label>Committed Release Date</label>
    <type>Date</type>
</CustomField>