force-app/main/default/objects/Change_Request_Overview__c/fields/Confirmation_within_2_Business_Days_afte__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_within_2_Business_Days_afte__c</fullName>
    <label>Timely Confirmation - Manual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late</fullName>
                <label>LATE</label>
            </value>
            <value>
                <fullName>Ontime</fullName>
                <label>ONTIME</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>