force-app/main/default/objects/Change_Request_Overview__c/fields/CR_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Confirmation_Date__c</fullName>
    <label>CR Confirmation Date</label>
    <type>Date</type>
</CustomField>