force-app/main/default/objects/Change_Request_Overview__c/fields/CR_on_time__c.field-meta.xml
<CustomField>
    <fullName>CR_on_time__c</fullName>
    <label>CR on time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CR Cancelled</fullName>
            </value>
            <value>
                <fullName>Ontime</fullName>
            </value>
            <value>
                <fullName>Early</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>