force-app/main/default/objects/Change_Request_Overview__c/fields/CR_session_date__c.field-meta.xml
<CustomField>
    <fullName>CR_session_date__c</fullName>
    <label>CR session date</label>
    <type>Date</type>
</CustomField>