force-app/main/default/objects/Change_Request_Overview__c/fields/Original_Committed_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Committed_Release_Date__c</fullName>
    <label>Original Committed Release Date</label>
    <type>Date</type>
</CustomField>