force-app/main/default/objects/Change_Request_Overview__c/fields/Reason_for_Delivery_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Delivery_Change__c</fullName>
    <label>Reason for Delivery Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New functionality of other CR with urgent demand</fullName>
            </value>
            <value>
                <fullName>Change functionality of other CR with urgent demand</fullName>
            </value>
            <value>
                <fullName>Software behaviour of other CR not acceptable for production</fullName>
            </value>
            <value>
                <fullName>Scope change of this CR</fullName>
            </value>
            <value>
                <fullName>NN resource capacity issue</fullName>
            </value>
            <value>
                <fullName>NN could not release as release defects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>