force-app/main/default/objects/Change_Request_Overview__c/fields/Reasons_for_delivery_date_change__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_delivery_date_change__c</fullName>
    <label>CR Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>Change Functionality</fullName>
            </value>
            <value>
                <fullName>Working as Designed changes</fullName>
                <label>Working as Designed Changes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>