force-app/main/default/objects/Change_Request_Overview__c/fields/Release_plan__c.field-meta.xml
<CustomField>
    <fullName>Release_plan__c</fullName>
    <label>Release plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>