force-app/main/default/objects/Change_Request_Overview__c/fields/SDD_approval_date_by_First_Orion__c.field-meta.xml
<CustomField>
    <fullName>SDD_approval_date_by_First_Orion__c</fullName>
    <label>SDD approval date by First Orion</label>
    <type>Date</type>
</CustomField>