force-app/main/default/objects/Change_Request_Overview__c/fields/T_Shirt_size_Date__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_size_Date__c</fullName>
    <label>T-Shirt size Date</label>
    <type>Date</type>
</CustomField>