force-app/main/default/objects/Change_Request_Overview__c/fields/T_Shirt_size_estimate__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_size_estimate__c</fullName>
    <label>T-Shirt size estimate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>CR Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>