force-app/main/default/objects/Change_Request_Overview__c/fields/T_Shirt_size_remark__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_size_remark__c</fullName>
    <label>T-Shirt size remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>