force-app/main/default/objects/Change_Request_Overview__c/fields/T_Shirt_size_within_7_business_Days_afte__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_size_within_7_business_Days_afte__c</fullName>
    <label>Timely T-Shirt Size (Manual)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Late</fullName>
                <label>LATE</label>
            </value>
            <value>
                <fullName>Ontime</fullName>
                <label>ONTIME</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>