force-app/main/default/objects/Change_Request_Overview__c/fields/Time_between_CR_and_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Time_between_CR_and_Delivery__c</fullName>
    <formula>Actual_Delivery_Date__c - Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time between CR and Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>