force-app/main/default/objects/Change_Request_Overview__c/fields/Time_between_CR_and_TShirt_Date__c.field-meta.xml
<CustomField>
    <fullName>Time_between_CR_and_TShirt_Date__c</fullName>
    <formula>T_Shirt_size_Date__c - CR_session_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time between CR and TShirt Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>