force-app/main/default/objects/Change_Request_Overview__c/fields/Time_between_CR_submission_and_Design_Ap__c.field-meta.xml
<CustomField>
    <fullName>Time_between_CR_submission_and_Design_Ap__c</fullName>
    <label>Time between CR and Design Approval (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>