force-app/main/default/objects/Change_Request_Overview__c/fields/Time_between_CR_Submission_and_Session2__c.field-meta.xml
<CustomField>
    <fullName>Time_between_CR_Submission_and_Session2__c</fullName>
    <formula>CR_session_date__c -  Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time between CR Submission and Session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>