force-app/main/default/objects/Change_Request_Overview__c/fields/Time_between_submission_and_CR_session_b__c.field-meta.xml
<CustomField>
    <fullName>Time_between_submission_and_CR_session_b__c</fullName>
    <label>Time between CR Submission and Session M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>