force-app/main/default/objects/Change_Request_Overview__c/fields/time_cr_and_design_approval__c.field-meta.xml
<CustomField>
    <fullName>time_cr_and_design_approval__c</fullName>
    <formula>SDD_approval_date_by_First_Orion__c -  Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time between CR and Design Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>