force-app/main/default/objects/Change_Request_Overview__c/fields/Timely_T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Timely_T_Shirt_Size__c</fullName>
    <label>Timely T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONTIME</fullName>
            </value>
            <value>
                <fullName>LATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>